added ImageView in activity_main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Norse Mythology</string>
+    <string name="main_logo">Скандинавская мифология</string>
+
+    <string-array name="options">
+        <item>Боги</item>
+        <item>Мифы</item>
+        <item>Something else</item>
+    </string-array>
 </resources>
